# boost-noexcept

./: .gitignore  README.adoc  index.html  meson.build  meson_options.txt
adoc/: noexcept.adoc  noexcept.html
adoc/synopses/: error_handler.hpp.adoc  has_current_error.hpp.adoc  noexcept.hpp.adoc  result.hpp.adoc  result_traits.hpp.adoc  result_traits_optional.hpp.adoc  result_traits_ptr.hpp.adoc  result_traits_std_optional.hpp.adoc  throw.hpp.adoc  traits_boost_optional.hpp.adoc  traits_ptr.hpp.adoc  traits_std_optional.hpp.adoc  try.hpp.adoc
benchmark/: deep_stack.cpp  deep_stack_outcome.cpp
examples/: FILE_ptr_example.cpp  FILE_ptr_throw_example.cpp  c_api_example.cpp  c_function_example.cpp  ifstream_example.cpp  lua_example.cpp
include/boost/: noexcept.hpp
include/boost/noexcept/: error_handler.hpp  error_ptr.hpp  fallible.hpp  has_current_error.hpp  noexcept_error_code.hpp  noexcept_result_traits.hpp  noexcept_result_traits_optional.hpp  noexcept_result_traits_ptr.hpp  noexcept_try.hpp  propagate.hpp  propagate_error_code.hpp  result.hpp  result_traits.hpp  result_traits_defaults.hpp  result_traits_optional.hpp  result_traits_ptr.hpp  result_traits_std_optional.hpp  succeeded.hpp  throw.hpp  throw_error_code.hpp  try.hpp
include/boost/noexcept/noexcept_config/: assert.hpp  inline.hpp  optional.hpp  rtti.hpp  thread_local.hpp  throw_exception.hpp
include/boost/noexcept/noexcept_detail/: any_movable.hpp  ceh.hpp  current_error.hpp  current_exception.hpp  eh.hpp  error.hpp  exception_holder.hpp  ptr_traits.hpp
include/boost/noexcept/traits/: ptr.hpp
include/boost/noexcept/traits/boost/: optional.hpp  shared_ptr.hpp  unique_ptr.hpp
include/boost/noexcept/traits/std/: optional.hpp  shared_ptr.hpp  unique_ptr.hpp
subprojects/: boost.wrap  lua.wrap
test/: Jamfile.v2  _rethrow_test.cpp  _unhandled_error_test1.cpp  _unhandled_error_test2.cpp  _unhandled_error_test3.cpp  _unhandled_error_test4.cpp  _unhandled_error_test5.cpp  _unhandled_error_test6.cpp  any_movable_test.cpp  bad_alloc_test.cpp  check_test.cpp  diagnostic_information_test.cpp  error_handler_test.cpp  error_info_test.cpp  error_ptr_test.cpp  error_test.cpp  exception_holder_test.cpp  handler_test.cpp  has_current_error_test.cpp  header-test.cpp  multiple_active_errors_test.cpp  noexcept_result_traits_ptr_test.cpp  propagate_error_code_test.cpp  propagate_test.cpp  result_mt_test.cpp  result_test.cpp  result_traits_ptr_test.cpp  succeeded_test.cpp  throw_error_code_test.cpp  throw_exception_test.cpp  throw_return_test.cpp  throw_test.cpp
